--- a/index.html
+++ b/index.html
@@ -126,7 +126,11 @@
     <nav class="header-nav row color-theme-hed">
         <div class="container-medium">
             <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944"class="header-nav-logo tracked-offpage" data-track-category="Global Nav" data-track-action="Go to HP" target="_blank">
-                <img src="img/logo.png">
+                <<!--img src="img/logo.png">-->
+                <picture>
+                    <source srcset="img/logo.webp" type="image/webp">
+                    <img src="img/logo.png" alt="Alt Text!">
+                </picture>
                 <span>Us Weekly Magazine</span>
             </a>
             <ul class="header-nav-primary">
@@ -432,7 +436,11 @@
     </div>
     <div class="righttxt">
         <div align="center">
-            <img alt="" src="img/mag1.jpg" style="text-align:center;max-width:400px;">
+            <picture style="text-align:center;max-width:400px;">
+                <source srcset="img/mag1.webp" type="image/webp">
+                <img src="img/mag1.jpg" alt="Alt Text!">
+            </picture>
+            <<!--img alt="" src="img/mag1.jpg" style="text-align:center;max-width:400px;">-->
         </div>
         <p><br>
             <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><b><u>Plant Pure Keto</u></b></a> was recently featured in OK MAGAZINE to show that celebs all
