add picture tag to use webp format

--- a/index.html
+++ b/index.html
@@ -169,7 +169,15 @@
                     today();
 
                 </script> | <i class="text-by"> By</i> <a class="article-byline tracked-offpage" data-track-category="Article Page" data-track-action="Tap Byline" data-track-label="/contributor/joyce-chen" target="_blank">Everly Smith</a><br>
-                <span class="sue-photo-panel-head"><img src="img/mk2.jpg" style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;"></span><br>
+                <span class="sue-photo-panel-head">
+<!--
+                    <img src="img/mk2.jpg" style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;">
+-->
+                    <picture style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;">
+                        <source srcset="img/mk2.webp" type="image/webp">
+                        <img src="img/mk2.jpg" alt="Alt Text!">
+                    </picture>
+                </span><br>
                 <center>
                     <div class="sue-photo-panel-head"></div>
                 </center>
@@ -192,7 +200,15 @@
                     </b>
                     <b>
                         <center>
-                            <div class="sue-photo-panel-head"><img src="img/mk3.jpg" alt="" style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;"></div>
+                            <div class="sue-photo-panel-head">
+                                <picture style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;">
+                                    <source srcset="img/mk3.webp" type="image/webp">
+                                    <img src="img/mk3.jpg" alt="Alt Text!">
+                                </picture>
+<!--
+                                <img src="img/mk3.jpg" alt="" style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;">
+-->
+                            </div>
                         </center>
                     </b>
                 <h2><b>What happened?</b></h2>
@@ -202,19 +218,50 @@
                 </div>
                 <br>
                 <center>
-                    <div class="sue-photo-panel-head"><img src="img/mk3d.jpg" alt="" style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;"></div>
+                    <div class="sue-photo-panel-head">
+<!--                        <img src="img/mk3d.jpg" alt="" style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;">-->
+                        <picture style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;">
+                            <source srcset="img/mk3d.webp" type="image/webp">
+                            <img src="img/mk3d.jpg" alt="Alt Text!">
+                        </picture>
+                    </div>
                 </center>
                 <br>
                 <div id="video-int-txt-4" data-social-animate="true" data-hook="scrollable-block" data-align="left"><h2><b>Why <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><b><u>Plant Pure Keto</u></b></a>?</b></h2>
                     </p><p>"I had tried other things for years, but nothing ever seemed to stick. I would lose 20 or 30 pounds... and gain back 40. I knew I needed to try something. I honestly would have had surgery if I had had the money. When my Zumba teacher mentioned <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><b><u>Plant Pure Keto</u></b></a> I figured I had nothing to lose. It was a good price, and it had a lot of positive reviews. I was skeptical, but I figured, I might as well... I'm so glad I did. <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><b><u>Plant Pure Keto</u></b></a> changed my life. For the first time in my life, the weight started to come off. <strong>Before, I would have to eat maybe 1000 calories a day along with my workouts, before I could start losing weight. But this was different. I ate basically what I normally ate. Less, but only because I wasn't hungry all the time anymore. My cravings started to go away. And I had all of this enegry all of a sudden. It was amazing</strong>."</p>
                 </div>
                 <div style="background: #fff; padding: 10px; font-size: 15px; font-style:">
-                    <div class="sue-photo-panel-head"><img src="img/mk3a.jpg" alt="" style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;"></div><p>Alvina considers <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><b><u>Plant Pure Keto</u></b></a> a way of life now. "It's not just a diet or a supplement. It's my way of living. It allows me to live my life. It allows me to be a mom, a wife, and a friend again. It has changed my whole outlook on life. I started walking more with my daughter. I was able to play with her again."<br /><br />Alvina's doctor was amazed. Her weight loss was dramatic, but healthy. She was losing real weight, not just water weight. She was shedding belly fat. And all of it had to do with one supplement. "Honestly, my doctor was so suprised, she looked up <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><b><u>Plant Pure Keto</u></b></a> and eventually started using it for herself." After losing her first 50 pounds, Alvina started to feel good enough about herself to start dating again.     </p>
-                    <div class="sue-photo-panel-head"><img src="img/mk3b.jpg" alt="" style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;"></div>
-                    <p>"I had a whole new life. I was still overweight, but I actually felt good about myself. I wanted to start to rebuild my life. I tried out a few dating apps. And frankly, got a lot of rude comments. But I didn't let that deter me. I knew I was worth love. I met Adam at the gym where I took my classes. We hit it off immediately. We started out as friends, talking for hours, hanging out. We'd make dinners together. He fell in love with Emma immediately.<br /><br /> After about 6 months of being friends. Adam told me he was ready for something more. I was shocked, honestly. I mean, I was totally in love with him, but I never thought someone as amazing as him would love me. He told me how much he cared about me. And ever since then, we've been inseperable. He is my best friend. And my biggest supporter!"   </p><div class="sue-photo-panel-head"><img src="img/mk3g.jpg" alt="" style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;"></div><p>"Every time I wanted to give up or slide back into old habits, Adam was there cheering me on. No more binge eating, <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><b><u>Plant Pure Keto</u></b></a>, and my weekly Zumba. Adam and I got married and had another amazing daughter. After her birth, I lost the weight so fast. It was like, my body was ready to be myself again. The day I reached my goal weight, I cried. It was the fourth best day of my life, after the birth of my daughters and my wedding.<strong> I was myself again. I was me." <br />
+                    <div class="sue-photo-panel-head">
+                        <picture style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;">
+                            <source srcset="img/mk3a.webp" type="image/webp">
+                            <img src="img/mk3a.jpg" alt="!">
+                        </picture>
+<!--                        <img src="img/mk3a.jpg" alt="" style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;">-->
+                    </div><p>Alvina considers <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><b><u>Plant Pure Keto</u></b></a> a way of life now. "It's not just a diet or a supplement. It's my way of living. It allows me to live my life. It allows me to be a mom, a wife, and a friend again. It has changed my whole outlook on life. I started walking more with my daughter. I was able to play with her again."<br /><br />Alvina's doctor was amazed. Her weight loss was dramatic, but healthy. She was losing real weight, not just water weight. She was shedding belly fat. And all of it had to do with one supplement. "Honestly, my doctor was so suprised, she looked up <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><b><u>Plant Pure Keto</u></b></a> and eventually started using it for herself." After losing her first 50 pounds, Alvina started to feel good enough about herself to start dating again.     </p>
+                    <div class="sue-photo-panel-head">
+<!--                        <img src="img/mk3b.jpg" alt="" style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;">-->
+                        <picture style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;">
+                            <source srcset="img/mk3b.webp" type="image/webp">
+                            <img src="img/mk3b.jpg" alt="">
+                        </picture>
+                    </div>
+                    <p>"I had a whole new life. I was still overweight, but I actually felt good about myself. I wanted to start to rebuild my life. I tried out a few dating apps. And frankly, got a lot of rude comments. But I didn't let that deter me. I knew I was worth love. I met Adam at the gym where I took my classes. We hit it off immediately. We started out as friends, talking for hours, hanging out. We'd make dinners together. He fell in love with Emma immediately.<br /><br /> After about 6 months of being friends. Adam told me he was ready for something more. I was shocked, honestly. I mean, I was totally in love with him, but I never thought someone as amazing as him would love me. He told me how much he cared about me. And ever since then, we've been inseperable. He is my best friend. And my biggest supporter!"   </p><div class="sue-photo-panel-head">
+<!--                    <img src="img/mk3g.jpg" alt="" style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;">-->
+                    <picture style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;">
+                        <source srcset="img/mk3g.webp" type="image/webp">
+                        <img src="img/mk3g.jpg" alt="">
+                    </picture>
+                </div>
+                    <p>"Every time I wanted to give up or slide back into old habits, Adam was there cheering me on. No more binge eating, <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><b><u>Plant Pure Keto</u></b></a>, and my weekly Zumba. Adam and I got married and had another amazing daughter. After her birth, I lost the weight so fast. It was like, my body was ready to be myself again. The day I reached my goal weight, I cried. It was the fourth best day of my life, after the birth of my daughters and my wedding.<strong> I was myself again. I was me." <br />
                         </strong><br />
                         Alvina credits <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><b><u>Plant Pure Keto</u></b></a> with her amazing weight loss. The support of her husband, and the love of her daughters all helped inspire her to continue. But <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><b><u>Plant Pure Keto</u></b></a> was the thing that made the difference. It changed the way her body lost weight. And made it possible for her to lose weight much more rapidly and much easier. <strong>"I honestly think without <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><u>Plant Pure Keto</u></a> I probably would have given up. Or, it would have taken me a decade or more to lose the weight. <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><u>Plant Pure Keto</u></a> really did make all the difference."</strong></p>
-                    <div class="sue-photo-panel-head"><img src="img/mk3h.jpg" alt="" style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;"></div>
+                    <div class="sue-photo-panel-head">
+<!--                        <img src="img/mk3h.jpg" alt="" style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;">-->
+                        <picture style="-webkit-border-top-left-radius:0px;-webkit-border-top-right-radius:0px;-moz-border-radius-topleft:0px;-moz-border-radius-topright:0px;border-top-left-radius:0px;border-top-right-radius:0px;">
+                            <source srcset="img/mk3h.webp" type="image/webp">
+                            <img src="img/mk3h.jpg" alt="">
+                        </picture>
+                    </div>
                     <p>Alvina has now lost more than 140 pounds. She is in the best shape of her life. And loves everything about her life. <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><b><u>Plant Pure Keto</u></b></a> helped her lose weight faster, easier and with better results than any other diet she had tried before. And, it was easier to stick to. Her viral videos help inspire more and more people to try <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><b><u>Plant Pure Keto</u></b></a> and lose weight for themselves!
                         <br>
                     </p>
