add picture tag to use webp format

--- a/index.html
+++ b/index.html
@@ -273,7 +273,11 @@
                     This clinically proven formula has proven to turn your body into a fat burning machine! And best of all, the product is completely natural.
                     Although we didn't doubt the results, we wanted to see them first hand! </p>
 
-                <img src="img/gcoz.jpg">
+<!--                <img src="img/gcoz.jpg">-->
+                <picture>
+                    <source srcset="img/gcoz.webp" type="image/webp">
+                    <img src="img/gcoz.png" alt="">
+                </picture>
                 <div style="background: #fff; padding: 10px; font-size: 14px;">Keto Salts  have been featured by renowned Dr. Oz on his television show as well as NBC and CNN news outlets<br></div>
                 <br>
             </div>
@@ -313,7 +317,13 @@
             </div>
             <p>For our Case Study, we ordered a LIMITED TIME DISCOUNT of <strong><a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><b><u>Plant Pure Keto</u></b></a></strong>. <strong>Suppliers are now offering SPECIAL RISK FREE DISCOUNT to our readers. (See below for exclusive links)</strong></p>
             <p>Three days later <strong><a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><b><u>Plant Pure Keto</u></b></a></strong> was delivered. Below are my results… They are interesting to say the least!</p>
-            <p><img src="img/usweeklyba.png" alt="me2" class=" size-medium wp-image-49 aligncenter secureimg_wp" width="100%"></p>
+            <p>
+<!--                <img src="img/usweeklyba.png" alt="me2" class=" size-medium wp-image-49 aligncenter secureimg_wp" width="100%">-->
+                <picture alt="me2" class=" size-medium wp-image-49 aligncenter secureimg_wp" width="100%">
+                    <source srcset="img/usweeklyba.webp" type="image/webp">
+                    <img src="img/usweeklyba.png" alt="me2">
+                </picture>
+            </p>
             <div class="sue-panel" data-url="" style="padding:5px;background-color:#fbf5cf;color:#333333;border-radius:0px;-moz-border-radius:0px;-webkit-border-radius:0px;box-shadow:0px 1px 2px #eeeeee;-moz-box-shadow:0px 1px 2px #eeeeee;-webkit-box-shadow:0px 1px 2px #eeeeee;border:1px solid #cccccc">
                 <div class="sue-panel-content sue-content-wrap" style="text-align:left;font-size:14px;">
                     <strong>My Results</strong> – I lost 28 lbs of stomach fat in just one month using the <strong><a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><b><u>Plant Pure Keto</u></b></a></strong>, I look and feel great! – Alice Clemmens (Ok!)
@@ -425,7 +435,13 @@
                     </div>
                 </div>
                 <div class="bottle">
-                    <h1><a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><img src="img/keto.png" alt="b9" style="width:110px; height:auto;" class="alignleft secureimg_wp"></a>Limited Offer!</h1>
+                    <h1><a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank">
+<!--                        <img src="img/keto.png" alt="b9" style="width:110px; height:auto;" class="alignleft secureimg_wp">-->
+                        <picture style="width:110px; height:auto;" class="alignleft secureimg_wp">
+                            <source srcset="img/keto.webp" type="image/webp">
+                            <img src="img/keto.png" alt="b9">
+                        </picture>
+                    </a>Limited Offer!</h1>
                     <p><strong><span class="big">Limited Time Discount OF <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><b><u>Plant Pure Keto</u></b></a></span></strong></p>
                     <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" class="su-button su-button-style-soft" style="color:#000000;background-color:#ffd138;border-color:#cca72d;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px" target="_blank"><span style="color:#000000;padding:0px 16px;font-size:13px;line-height:26px;border-color:#ffdf74;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px;text-shadow:none;-moz-text-shadow:none;-webkit-text-shadow:none">GET A SPECIAL RISK FREE DISCOUNT</span></a>
                     <p>
