add picture tag to use webp format

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 <!--                        <img src="img/keto.png" alt="b9" style="width:110px; height:auto;" class="alignleft secureimg_wp">-->
                         <picture style="width:110px; height:auto;" class="alignleft secureimg_wp">
                             <source srcset="img/keto.webp" type="image/webp">
-                            <img src="img/keto.png" alt="b9">
+                            <img src="img/keto.png" alt="b9" style="width:110px; height:auto;">
                         </picture>
                     </a>Limited Offer!</h1>
                     <p><strong><span class="big">Limited Time Discount OF <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><b><u>Plant Pure Keto</u></b></a></span></strong></p>
@@ -562,7 +562,13 @@
             <p><strong>What The Lucky One's Who've Tried  Plant Pure Keto Are Saying</strong></p>
             <div class="watotherssay">
                 <center>
-                    <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><img src="img/beforeafter_3.jpg" alt="..."></a>
+                    <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank">
+<!--                        <img src="img/beforeafter_3.jpg" alt="...">-->
+                        <picture style="width:110px; height:auto;" >
+                            <source srcset="img/beforeafter_3.webp" type="image/webp">
+                            <img src="img/beforeafter_3.jpg" alt="..." >
+                        </picture>
+                    </a>
                 </center>
                 <br>
                 <p>"My friends kept telling me about
@@ -632,28 +638,40 @@
         <div style="text-align: center; padding-top:20px;">
             &nbsp;
             <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank">
-                <center><img src="img/keto.png" style="width:110px; height:auto;"></center>
+                <center>
+<!--                    <img src="img/keto.png" style="width:110px; height:auto;">-->
+                    <picture style="width:110px; height:auto;" >
+                        <source srcset="img/keto.webp" type="image/webp">
+                        <img src="img/keto.png" alt="b9" style="width:110px; height:auto;">
+                    </picture>
+                </center>
             </a>
             <div style="width:90%;margin:auto;">
                 <span style="background-color: #ffff66;font-size:14px; font-weight:bold;">Use our EXCLUSIVE Link to Receive a RISK FREE DISCOUNT TODAY!</span>
             </div>
             <center>
-                <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank"><img src="img/button.png" class="Buybutton" style="width: 70%;"></a>&nbsp;
+                <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank">
+<!--                    <img src="img/button.png" class="Buybutton" style="width: 70%;">-->
+                    <picture class="Buybutton" style="width: 70%;" >
+                        <source srcset="img/button.webp" type="image/webp">
+                        <img src="img/button.png" style="width: 70%;" >
+                    </picture>
+                </a>&nbsp;
             </center>
             <span class="offer2">&nbsp;</span>
         </div>
     </div><div style="display: none; width: 292.483px; height: 405.4px; float: none;"></div>
     <div style="display: none; width: 231.062px; height: 874px; float: none;"></div>
 </div>
-<footer>
+<!--<footer>
     <div class="container-new">
         <div>qwerty</div>
-        <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&amp;C1=1908-2381&amp;C2=-------------&amp;C3=10492715&amp;C4=&amp;click_id=9344944" class="header-nav-logo tracked-offpage" data-track-category="Global Nav" data-track-action="Go to HP" target="_blank">
+        <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&amp;C1=1908-2381&amp;C2=-&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&amp;C3=10492715&amp;C4=&amp;click_id=9344944" class="header-nav-logo tracked-offpage" data-track-category="Global Nav" data-track-action="Go to HP" target="_blank">
             <img src="img/logo.png">
             <span>Us Weekly Magazine</span>
         </a>
     </div>
-</footer>
+</footer>-->
 
 
 <script>
