--- a/index.html
+++ b/index.html
@@ -612,7 +612,12 @@
         <hr>
         <div class="results">
             &nbsp;<a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944" target="_blank">
-                <img class="contentImage" alt="" src="img/beforeafter_1.jpg"></a>&nbsp;
+<!--                <img class="contentImage" alt="" src="img/beforeafter_1.jpg">-->
+            <picture class="contentImage" >
+                <source srcset="img/beforeafter_1.webp" type="image/webp">
+                <img src="img/beforeafter_1.jpg" alt="b9" style="width:110px; height:auto;">
+            </picture>
+        </a>&nbsp;
         </div>
         <div class="tweet-wrap" style="background-color:white;">
             &nbsp;<a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&C1=1908-2381&C2=-------------&C3=10492715&C4=&click_id=9344944"target="_blank"></a>
