add picture tag to use webp format

--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
 <!--                <img class="contentImage" alt="" src="img/beforeafter_1.jpg">-->
             <picture class="contentImage" >
                 <source srcset="img/beforeafter_1.webp" type="image/webp">
-                <img src="img/beforeafter_1.jpg" alt="b9" style="width:110px; height:auto;">
+                <img src="img/beforeafter_1.jpg" alt="">
             </picture>
         </a>&nbsp;
         </div>
