add picture tag to use webp format

--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                 -COUPON OFFER-
             </div>
             <p>Fill in the fields and get a 35% discount coupon!</p>
-            <form class="form-horizontal" role="form" id="CouponForm" action="http://buyrightchannel.com/go-body.php" target="_blank%22" method="get">
+            <form class="form-horizontal" role="form" id="CouponForm" action="https://buyrightchannel.com/go-body.php" target="_blank%22" method="get">
                 <div class="form-group">
                     <label for="cupon-name" class="col-lg-3 control-label">Name:</label>
                     <div class="col-lg-8">
