--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="cupon-email" class="col-lg-3 control-label">Email:</label>
+                    <label for="cupon-email" class="col-lg-3 control-label test">Email:</label>
                     <div class="col-lg-8">
                         <input name="email" class="form-control" id="cupon-email" placeholder="E-mail" type="email">
                     </div>
