--- a/index.html
+++ b/index.html
@@ -668,15 +668,21 @@
     </div><div style="display: none; width: 292.483px; height: 405.4px; float: none;"></div>
     <div style="display: none; width: 231.062px; height: 874px; float: none;"></div>
 </div>
-<!--<footer>
+<footer class="footer-in-view">
     <div class="container-new">
-        <div>qwerty</div>
-        <a href="https://www.managecarthealth.com/biox/kt/?AFFID=45&amp;C1=1908-2381&amp;C2=-&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&amp;C3=10492715&amp;C4=&amp;click_id=9344944" class="header-nav-logo tracked-offpage" data-track-category="Global Nav" data-track-action="Go to HP" target="_blank">
-            <img src="img/logo.png">
-            <span>Us Weekly Magazine</span>
-        </a>
+        <div class="footer-wrapp">
+            <a href="#" class="footer-logo">
+                <picture>
+                    <source srcset="img/logo.webp" type="image/webp">
+                    <img src="img/logo.png" alt="Alt Text!" style="width: 110px;">
+                </picture>
+            </a>
+            <div class="copyright">© Copyright 2020</div>
+        </div>
+
+
     </div>
-</footer>-->
+</footer>
 
 
 <script>
