--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
     </article></div>
 
 
-<div class="col-md-4 sidebar" style="height:7291px;background:white;">
+<div class="col-md-4 sidebar">
     <div style="background-color: rgba(255, 65, 118, 1);color:white; margin:0px; font-size: 34px;">
         <h1 style="text-align:center;">BREAKING NEWS</h1>
     </div>
@@ -674,7 +674,7 @@
             <a href="#" class="footer-logo">
                 <picture>
                     <source srcset="img/logo.webp" type="image/webp">
-                    <img src="img/logo.png" alt="Alt Text!" style="width: 110px;">
+                    <img src="img/logo.png" alt="Alt Text!">
                 </picture>
             </a>
             <div class="copyright">© Copyright 2020</div>
